<resources>
    <string name="app_name">中付钱柜</string>
    <string name="手机号码">手机号码</string>
    <string name="登录密码">登录密码</string>
    <string name="记住密码">记住密码</string>
    <string name="忘记密码1">忘记密码？</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="返回">返回</string>
    <string name="推荐人手机号">推荐人手机号</string>
    <string name="登录密码616位数字字母组合">登录密码（6-16位数字、字母组合）</string>
    <string name="确认密码">确认密码</string>
    <string name="支付密码6位数字">支付密码（6位数字）</string>
    <string name="图形验证码">图形验证码</string>
    <string name="短信验证码">短信验证码</string>
    <string name="立即获取">立即获取</string>
    <string name="已有账号返回登录">已有账号，返回登录</string>
    <string name="为了保证您的账户安全请勿泄露密码">为了保证您的账户安全，请勿泄露密码</string>
    <string name="新登录密码616位数字字母组合">新登录密码（6-16位数字、字母组合）</string>
    <string name="登录密码不一致">登录密码不一致</string>
    <string name="重置密码">重置密码</string>
    <string name="确认重置">确认重置</string>
    <string name="确定退出中付钱柜吗">确定退出中付钱柜吗？</string>
    <string name="首页">首页</string>
    <string name="报表">报表</string>
    <string name="收益">收益</string>
    <string name="我的">我的</string>
    <string name="中付钱柜">中付钱柜</string>
    <string name="传统POS">传统POS</string>
    <string name="线上活动">线上活动</string>
    <string name="机具管理">机具管理</string>
    <string name="费率申请">费率申请</string>
    <string name="推广中心">推广中心</string>
    <string name="商户查询">商户查询</string>
    <string name="钱柜学院">钱柜学院</string>
    <string name="行业资讯">行业资讯</string>
    <string name="报表中心">报表中心</string>
    <string name="查看详情">查看详情</string>
    <string name="本月累计交易额元">本月累计交易额(元)</string>
    <string name="本月新增商户人">本月新增商户</string>
    <string name="累计商户人">累计商户</string>
    <string name="收益中心">收益中心</string>
    <string name="我的收益">我的收益</string>
    <string name="今日收益2">今日收益：</string>
    <string name="可提现2">可提现：</string>
    <string name="提现">提现</string>
    <string name="累计收益2">累计收益：</string>
    <string name="累计提现2">累计提现：</string>
    <string name="MPOS收益元">MPOS 收益(元)</string>
    <string name="月收益">月收益</string>
    <string name="直营收益2">直营收益：</string>
    <string name="代理收益2">代理收益：</string>
    <string name="收益类型">收益类型</string>
    <string name="金额元">金额(元)</string>
    <string name="明细">明细</string>
    <string name="请输入支付密码">请输入支付密码</string>
    <string name="提现金额">提现金额</string>
    <string name="提现到">提现到</string>
    <string name="中国建设银行">中国建设银行</string>
    <string name="请输入提现金额">请输入提现金额</string>
    <string name="可提现金额">可提现金额：%s</string>
    <string name="总手续费2">总手续费：</string>
    <string name="考核未达标扣除2">考核未达标扣除：</string>
    <string name="到账金额2">到账金额：</string>
    <string name="提现温馨提示">*温馨提示： \n提现金额不得低于 %1s 元；\n提现自动扣取 %2s 所得税，%3s 元一笔提现费； \n提现到账时间 T+1 天。</string>
    <string name="申请提现">申请提现</string>
    <string name="提现记录">提现记录</string>
    <string name="银行卡号2">银行卡号：</string>
    <string name="到账金额">到账金额</string>
    <string name="处理进度">处理进度</string>
    <string name="单笔提现费">单笔提现费</string>
    <string name="提现总额">提现总额</string>
    <string name="所得税7">所得税(7%)</string>
    <string name="考核未达标">考核未达标</string>
    <string name="提现时间">提现时间</string>
    <string name="处理中">处理中</string>
    <string name="处理失败">处理失败</string>
    <string name="订单号2">订单号：</string>
    <string name="收益金额">收益金额</string>
    <string name="SN号">SN号</string>
    <string name="交易类型">交易类型</string>
    <string name="交易金额">交易金额</string>
    <string name="交易时间">交易时间</string>
    <string name="收益时间">收益时间</string>
    <string name="代理业绩">代理业绩</string>
    <string name="我的业绩">我的业绩</string>
    <string name="月业绩">月业绩</string>
    <string name="交易额元">交易额(元)</string>
    <string name="新增代理">新增代理</string>
    <string name="新增商户">新增商户</string>
    <string name="业绩走势分析月">业绩走势分析(月)</string>
    <string name="日业绩">日业绩</string>
    <string name="业绩走势分析日">业绩走势分析(日)</string>
    <string name="交易额走势">交易额走势</string>
    <string name="新增代理走势">新增代理走势</string>
    <string name="新增商户走势">新增商户走势</string>
    <string name="业绩走势月">业绩走势(月)</string>
    <string name="业绩走势日">业绩走势(日)</string>
    <string name="申请记录">申请记录</string>
    <string name="搜索范围">搜索范围</string>
    <string name="输入开始SN码">输入开始SN码</string>
    <string name="输入结束SN码">输入结束SN码</string>
    <string name="搜索">搜索</string>
    <string name="搜索结果">搜索结果</string>
    <string name="全选">全选</string>
    <string name="刷卡费率">刷卡费率</string>
    <string name="请选择刷卡费率">请选择刷卡费率</string>
    <string name="调整费率温馨提示">*温馨提示： \n申请费率调整须知： \n1.已激活机器 T(工作日)+1生效； \n2.未激活机器 工作日当天生效。</string>
    <string name="调整费率">调整费率</string>
    <string name="推荐码">推荐码</string>
    <string name="立即分享">立即分享</string>
    <string name="保存图片">保存图片</string>
    <string name="SN码">SN码</string>
    <string name="请选择POS机SN码">请选择POS机SN码</string>
    <string name="姓名">姓名</string>
    <string name="请输入商户手机号">请输入商户手机号</string>
    <string name="交易密码">交易密码</string>
    <string name="请输入交易密码">请输入交易密码</string>
    <string name="选择POS机SN码">选择POS机SN码</string>
    <string name="搜索SN码">搜索SN码</string>
    <string name="SN码2">SN码：</string>
    <string name="请输入商户姓名">请输入商户姓名</string>
    <string name="传统POS收益元">传统POS 收益(元)</string>
    <string name="奖励记录">奖励记录</string>
    <string name="活动列表">活动列表</string>
    <string name="活动订单">活动订单</string>
    <string name="传统POS活动">传统POS活动</string>
    <string name="MPOS活动">MPOS活动</string>
    <string name="立即参与">立即参与</string>
    <string name="个人中心">个人中心</string>
    <string name="未实名">未实名</string>
    <string name="常用功能">常用功能</string>
    <string name="结算卡中心">结算卡中心</string>
    <string name="召回意见">召回意见</string>
    <string name="实名认证">实名认证</string>
    <string name="消息中心">消息中心</string>
    <string name="客服中心">客服中心</string>
    <string name="头像">头像</string>
    <string name="未设置">未设置</string>
    <string name="昵称">昵称</string>
    <string name="修改登录密码">修改登录密码</string>
    <string name="修改交易密码">修改交易密码</string>
    <string name="当前版本">当前版本</string>
    <string name="横幅通知">横幅通知</string>
    <string name="提示音">提示音</string>
    <string name="退出登录">退出登录</string>
    <string name="修改昵称">修改昵称</string>
    <string name="确认修改">确认修改</string>
    <string name="新交易密码">新交易密码</string>
    <string name="请输入图形验证码">请输入图形验证码</string>
    <string name="请输入短信验证码">请输入短信验证码</string>
    <string name="六位数字">6位数字</string>
    <string name="密码不一致">密码不一致</string>
    <string name="六十六位数字字母组合">6-16位数字、字母组合</string>
    <string name="新登录密码">新登录密码</string>
    <string name="请输入登录密码">请输入登录密码</string>
    <string name="当前绑定手机号2">当前绑定手机号：</string>
    <string name="修改手机号码">修改手机号码</string>
    <string name="立即添加">立即添加</string>
    <string name="删除">删除</string>
    <string name="添加">添加</string>
    <string name="持卡人姓名">持卡人姓名</string>
    <string name="请输入持卡人姓名">请输入持卡人姓名</string>
    <string name="开户行">开户行</string>
    <string name="请输入开户行">请输入开户行</string>
    <string name="银行代码">银行代码</string>
    <string name="请输入银行代码">请输入银行代码</string>
    <string name="银行卡号">银行卡号</string>
    <string name="请输入银行卡号">请输入银行卡号</string>
    <string name="上传银行卡正反面照">上传银行卡正反面照</string>
    <string name="请保持图片清晰可见">请保持图片清晰可见</string>
    <string name="银行卡正面照">银行卡正面照</string>
    <string name="设为默认">设为默认</string>
    <string name="添加结算卡">添加结算卡</string>
    <string name="请输入您的真实姓名">请输入您的真实姓名</string>
    <string name="请输入您的身份证号">请输入您的身份证号</string>
    <string name="上传证件照片和人像照">上传证件照片和人像照</string>
    <string name="银行卡反面照">银行卡反面照</string>
    <string name="身份证正面照">身份证正面照</string>
    <string name="身份证反面照">身份证反面照</string>
    <string name="提交审核">提交审核</string>
    <string name="手持身份证照">手持身份证照</string>
    <string name="申请审核中">申请审核中</string>
    <string name="请耐心等待">请耐心等待</string>
    <string name="审核失败">审核失败</string>
    <string name="抱歉您的资料信息存在不符请重新提交完整有效的资料">抱歉，您的资料信息存在不符\n请重新提交完整有效的资料</string>
    <string name="重新提交申请">重新提交申请</string>
    <string name="实名认证成功">实名认证成功</string>
    <string name="真实姓名2">真实姓名:</string>
    <string name="通知">通知</string>
    <string name="公告">公告</string>
    <string name="待处理">待处理</string>
    <string name="已同意">已同意</string>
    <string name="已拒绝">已拒绝</string>
    <string name="同意">同意</string>
    <string name="拒绝">拒绝</string>
    <string name="分配">分配</string>
    <string name="召回">召回</string>
    <string name="解绑">解绑</string>
    <string name="分配记录">分配记录</string>
    <string name="选择类型">选择类型</string>
    <string name="流量卡">流量卡</string>
    <string name="确认召回">确认召回</string>
    <string name="请输入要解绑的SN码">请输入要解绑的SN码</string>
    <string name="提交申请">提交申请</string>
    <string name="解绑申请记录">解绑申请记录</string>
    <string name="商户号可不填">商户号（可不填）</string>
    <string name="请输入商户号">请输入商户号</string>
    <string name="云闪付结算价">云闪付结算价</string>
    <string name="请选择云闪付结算价">请选择云闪付结算价</string>
    <string name="请选择要分配的代理伙伴">请选择要分配的代理伙伴</string>
    <string name="代理伙伴">代理伙伴</string>
    <string name="确定分配">确定分配</string>
    <string name="流量卡分配">流量卡分配</string>
    <string name="刷卡结算价">普通刷卡结算价</string>
    <string name="请选择刷卡结算价">请选择刷卡结算价</string>
    <string name="单笔分润">单笔分润</string>
    <string name="请选择单笔分润比例">请选择单笔分润比例</string>
    <string name="机器返现">机器返现</string>
    <string name="请选择机器返现比例">请选择机器返现比例</string>
    <string name="微信结算价">微信结算价</string>
    <string name="请选择微信结算价">请选择微信结算价</string>
    <string name="支付宝结算价">支付宝结算价</string>
    <string name="请选择支付宝结算价">请选择支付宝结算价</string>
    <string name="MPOS分配">MPOS分配</string>
    <string name="传统POS分配">传统POS分配</string>
    <string name="活动类型">活动类型</string>
    <string name="奖励类型">奖励类型</string>
    <string name="申请时间">申请时间</string>
    <string name="订单号">订单号</string>
    <string name="活动周期">活动周期</string>
    <string name="参与活动的SN码">参与活动的SN码 (%s)</string>
    <string name="展开">展开</string>
    <string name="取消活动">取消活动</string>
    <string name="活动订单详情">活动订单详情</string>
    <string name="活动奖励明细">活动奖励明细</string>
    <string name="我要参与">我要参与</string>
    <string name="请选择活动等级">请选择活动等级</string>
    <string name="POS机SN码">POS机SN码</string>
    <string name="请选择参与活动的POS机SN码">请选择参与活动的POS机SN码</string>
    <string name="活动等级">活动等级</string>
    <string name="申请参与">申请参与</string>
    <string name="参与活动">参与活动</string>
    <string name="活动详情">活动详情</string>
    <string name="费率更改2">费率更改：</string>
    <string name="申请成功">申请成功</string>
    <string name="费率申请记录">费率申请记录</string>
    <string name="流量卡号2">流量卡号：</string>
    <string name="分配修改">分配修改</string>
    <string name="确定修改">确定修改</string>
    <string name="直营商户">直营商户</string>
    <string name="我的代理商">我的代理商</string>
    <string name="传统POS商户">传统POS商户</string>
    <string name="MPOS商户">MPOS商户</string>
    <string name="发展的所有商户">发展的所有商户</string>
    <string name="优质商户">优质商户</string>
    <string name="本月交易金额">本月交易金额≥50000元</string>
    <string name="全部商户">全部商户</string>
    <string name="活跃商户">活跃商户</string>
    <string name="近30天交易笔数笔并交易金额元">近30天交易笔数≥2笔 并 交易金额≥10元</string>
    <string name="需认证商户">需认证商户</string>
    <string name="未身份认证的商户">未身份认证的商户</string>
    <string name="休眠商户">休眠商户</string>
    <string name="入网60天连续无交易60天">入网≥60天，连续无交易＞60天</string>
    <string name="总人数人">总人数：%s人</string>
    <string name="商户编号2">商户编号：</string>
    <string name="商户姓名2">商户姓名：</string>
    <string name="商户状态2">商户状态：</string>
    <string name="正常">正常</string>
    <string name="基本资料">基本资料</string>
    <string name="业务产品">业务产品</string>
    <string name="机具">机具</string>
    <string name="已使用">已使用</string>
    <string name="交易状况">交易状况</string>
    <string name="本月交易笔数2">本月交易笔数：</string>
    <string name="本月交易金额2">本月交易金额：</string>
    <string name="详情">详情</string>
    <string name="全部">全部</string>
    <string name="已交易">已交易</string>
    <string name="未交易">未交易</string>
    <string name="商户进件查询">商户进件查询</string>
    <string name="申请扫码支付">申请扫码支付</string>
    <string name="申请类型">申请类型</string>
    <string name="微信支付宝">微信、支付宝</string>
    <string name="请选择需要申请的SN码">请选择需要申请的SN码</string>
    <string name="上传照片">上传照片</string>
    <string name="分润类型">分润类型</string>
    <string name="卡类型">卡类型</string>
    <string name="单笔金额">单笔金额</string>
    <string name="交易产品">交易产品</string>
    <string name="请选择类型">请选择类型</string>
    <string name="传统机">传统机</string>
    <string name="电签机">电签机</string>
</resources>